tests/valid/function/mixed_forall_fn_value_annotated_let.facet
fn id<'a, T>(x: unrestricted &'a affine T) -> unrestricted &'a affine T {
  x
}

fn main<'x>(r: unrestricted &'x affine isize) -> unrestricted &'x affine isize {
  let f: unrestricted for<'a, T> fn(unrestricted &'a affine T) -> unrestricted &'a affine T = id in
  (f r)
}
