tests/invalid/borrow_error/move_mut_ref_then_use_orig.facet
fn bad(mut x: unrestricted isize) -> unrestricted isize {
    let r: affine &mut unrestricted isize = (&mut x) in
    let s: affine &mut unrestricted isize = r in
    (*r)
}
